--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,8 @@ dependencies = [
     "scikit-learn>=1.6.1",
     "scipy==1.12",
 ]
+
+[dependency-groups]
+dev = [
+    "jupyter-book>=1.0.4.post1",
+]
