--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,13 @@ dependencies = [
     "ipywidgets>=8.1.7",
     "jupyterlab>=4.4.2",
     "matplotlib>=3.10.3",
+    "pandas>=2.2.3",
+    "plotly>=6.1.1",
     "requests>=2.32.3",
     "scikit-learn>=1.6.1",
     "scipy==1.12",
     "tqdm>=4.67.1",
+    "umap-learn>=0.5.7",
 ]
 
 [dependency-groups]
