--- a/content/_toc.yml
+++ b/content/_toc.yml
@@ -17,4 +17,4 @@ parts:
   chapters:
   - file: word_embeddings
   - file: sentence_embeddings
-  - file: literature_mining.ipynb
+  - file: literature_mining
