--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Hands-on Session: Exploring physical sciences scientific literatu
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "anywidget>=0.9.18",
     "fastembed>=0.4.2",
     "gensim>=4.3.2",
     "ipywidgets>=8.1.7",
