--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "anywidget>=0.9.18",
+    "chart-studio>=1.1.0",
     "fastembed>=0.4.2",
     "gensim>=4.3.2",
     "ipywidgets>=8.1.7",
