--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "ipywidgets>=8.1.7",
     "jupyterlab>=4.4.2",
     "matplotlib>=3.10.3",
+    "numpy>=1.26.4",
     "pandas>=2.2.3",
     "plotly>=6.1.1",
     "requests>=2.32.3",
